# Embedded-Telemetry-Node-Project

./: .gitignore  ISSUE_TEMPLATES_SUMMARY.md  README.md  platformio  platformio.ini
.github/PROJECT_BOARD/: 00-EPIC-TDD-ROADMAP.md  KANBAN_STRUCTURE.md  LABELS.md  QUICK_START.md  README.md  USAGE_GUIDE.md  create_issues.sh  create_labels.sh
.github/PROJECT_BOARD/PHASE-1-CRC16/: 01-crc16-empty-buffer-test.md  02-crc16-known-value-test.md  03-crc16-edge-cases-test.md  04-crc16-incremental-computation.md  05-crc16-packet-integration.md
.github/PROJECT_BOARD/PHASE-2-PACKET-SERIALIZATION/: 01-packet-structure-definition.md  02-packet-serialization.md  03-packet-deserialization.md  04-packet-buffer-management.md  05-endianness-handling.md
.github/PROJECT_BOARD/PHASE-3-COMMAND-PARSER/: 01-command-structure-definition.md  02-command-parser-implementation.md  03-response-generator.md  04-command-handler-framework.md  05-builtin-command-handlers.md
.github/PROJECT_BOARD/PHASE-4-DEVICE-INTEGRATION/: 01-serial-packet-transmission.md  02-serial-packet-reception.md  03-performance-benchmarks.md  04-error-recovery-tests.md
.github/PROJECT_BOARD/PHASE-5-CICD/: 01-github-actions-unit-tests.md  02-build-automation.md  03-code-coverage-reporting.md  04-documentation-generation.md
docs/: TESTING.md  TESTING_QUICK_START.md
firmware/: platformio.ini
firmware/src/: app.cpp  app.h  hal_led.cpp  hal_led.h  hal_time.cpp  hal_time.h  main.cpp  serial_io.cpp  serial_io.h
firmware/src/hal/led/: hal_led.cpp  hal_led.h
firmware/src/hal/logging/: logging.h  serial_logger.h
firmware/src/hal/serial/: serial_io.cpp  serial_io.h
firmware/src/hal/time/: hal_time.cpp  hal_time.h
host/: telemetry_cli.py
test/: CMakeLists.txt  app_impl.cpp  test_app.cpp
